; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c___bba_getlink_state_async.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c___bba_getlink_state_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_CHANNEL_0 = common dso_local global i32 0, align 4
@EXI_DEVICE_2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @__bba_getlink_state_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__bba_getlink_state_async() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @EXI_CHANNEL_0, align 4
  %4 = load i32, i32* @EXI_DEVICE_2, align 4
  %5 = call i64 @EXI_Lock(i32 %3, i32 %4, i32* null)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %13

8:                                                ; preds = %0
  %9 = call i32 (...) @__linkstate()
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* @EXI_CHANNEL_0, align 4
  %11 = call i32 @EXI_Unlock(i32 %10)
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %8, %7
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i64 @EXI_Lock(i32, i32, i32*) #1

declare dso_local i32 @__linkstate(...) #1

declare dso_local i32 @EXI_Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
